--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-    "name": "indiesaas",
-    "version": "0.0.1",
+    "name": "eventts",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
         "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
         "lint": "biome check",
-        "check-types": "tsc --noEmit"
+        "check-types": "tsc --noEmit",
+        "db:push": "drizzle-kit push",
+        "db:studio": "drizzle-kit studio"
     },
     "dependencies": {
         "@better-auth/stripe": "^1.2.12",
@@ -24,10 +26,12 @@
         "@radix-ui/react-tabs": "^1.1.12",
         "@radix-ui/react-tooltip": "^1.2.7",
         "@remixicon/react": "^4.6.0",
+        "@types/recharts": "^1.8.29",
         "@uploadthing/react": "^7.3.2",
         "better-auth": "^1.2.12",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "drizzle-orm": "^0.44.2",
         "embla-carousel-react": "^8.6.0",
         "framer-motion": "^12.19.2",
@@ -40,6 +44,7 @@
         "react-day-picker": "^9.7.0",
         "react-dom": "^19.1.0",
         "react-hook-form": "^7.60.0",
+        "recharts": "^3.2.1",
         "resend": "^4.7.0",
         "sonner": "^2.0.5",
         "stripe": "^18.3.0",
