feat: Add test coverage improver agent for strategic test enhancements
docs: Create comprehensive project documentation for EventTS application

chore: Update To Do list with completed and missing features for EventTS

feat: Implement analytics reports API for detailed analytics retrieval

feat: Create dashboard registrations API for user-specific registration data

feat: Add attendees management API for registration updates

feat: Implement payment processing API for registration payments

feat: Create registration details API for fetching specific registration information

feat: Develop analytics service for comprehensive dashboard analytics and reports

--- a/.env.example
+++ b/.env.example
@@ -5,20 +5,23 @@ BETTER_AUTH_SECRET=""
 DATABASE_URL="" 
 
 # Site Url
-NEXT_PUBLIC_APP_URL=""
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
-
-#Needed for Stripe plugin
-STRIPE_SECRET_KEY="sk_test_..." # Your Stripe secret key
-STRIPE_WEBHOOK_SECRET="whsec_..." # Your Stripe webhook secret
+# Ipaymu Payment Gateway
+IPAYMU_API_KEY=""
+IPAYMU_MERCHANT_CODE=""
+IPAYMU_BASE_URL="https://my.ipaymu.com"
 
 #Needed for Resend email 
 RESEND_API_KEY="" 
-MAIL_FROM="noreply@example.com"
+MAIL_FROM="onboarding@resend.dev"
 
 #Needed for avatar upload
 UPLOADTHING_TOKEN="" 
 
+#Needed for Stripe plugin (optional if using Stripe instead of Ipaymu)
+STRIPE_SECRET_KEY="sk_test_..." # Your Stripe secret key
+STRIPE_WEBHOOK_SECRET="whsec_..." # Your Stripe webhook secret
 
 # Optional: OAuth providers (configure as needed)
 # GOOGLE_CLIENT_ID=""
