feat: Update project to EventTS branding and functionality
- Added description to package.json for EventTS.
- Updated dependencies including nodemailer for email functionality.
- Modified logo.svg to reflect new branding.
- Removed unused seline.js file.
- Updated links in dashboard layout and community section to point to EventTS GitHub.
- Replaced useSession hook with authClient in various components for session management.
- Removed seline.js script from layout.
- Updated contact section placeholder from "Indie" to "Event".
- Changed hero section text to "Event Management".
- Updated team section to reflect EventTS development team.
- Updated site configuration with new branding and support email.
- Enhanced database connection for Supabase compatibility.
- Replaced Resend with Nodemailer for email sending in auth and registration services.
- Removed Resend API key from environment variables.
- Added avatar placeholder image for user profiles.
- Created Providers component for theming and notifications.
- Added comprehensive database schema for EventTS in Supabase.

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 BETTER_AUTH_SECRET=""
 
 #Required for database
-DATABASE_URL="" 
+DATABASE_URL="" # For Supabase, add ?sslmode=require to the end of the connection string
 
 # Site Url
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
@@ -12,9 +12,10 @@ IPAYMU_API_KEY=""
 IPAYMU_MERCHANT_CODE=""
 IPAYMU_BASE_URL="https://my.ipaymu.com"
 
-#Needed for Resend email 
-RESEND_API_KEY="" 
-MAIL_FROM="onboarding@resend.dev"
+#Needed for Nodemailer email 
+GMAIL_USER="" # Your Gmail address for sending emails
+GMAIL_APP_PASSWORD="" # Your Gmail app password
+MAIL_FROM="" # Email address to send from (can be same as GMAIL_USER)
 
 #Needed for avatar upload
 UPLOADTHING_TOKEN="" 
