--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "eventts",
     "version": "1.0.0",
     "private": true,
+    "description": "EventTS - A modern event management platform",
     "scripts": {
         "dev": "next dev --turbopack",
         "build": "next build",
@@ -39,13 +40,13 @@
         "next": "15.3.4",
         "next-themes": "0.4.6",
         "nextjs-toploader": "^3.8.16",
+        "nodemailer": "^6.10.1",
         "pg": "^8.16.2",
         "react": "^19.1.0",
         "react-day-picker": "^9.7.0",
         "react-dom": "^19.1.0",
         "react-hook-form": "^7.60.0",
         "recharts": "^3.2.1",
-        "resend": "^4.7.0",
         "sonner": "^2.0.5",
         "stripe": "^18.3.0",
         "tailwind-merge": "^3.3.1",
@@ -57,6 +58,7 @@
         "@biomejs/biome": "2.0.0",
         "@tailwindcss/postcss": "^4.1.10",
         "@types/node": "^24.0.3",
+        "@types/nodemailer": "^6.4.20",
         "@types/pg": "^8.15.4",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
