--- a/package.json
+++ b/package.json
@@ -62,14 +62,17 @@
         "@types/pg": "^8.15.5",
         "@types/react": "^19.2.2",
         "@types/react-dom": "^19.2.2",
+        "css-loader": "^7.1.2",
         "dotenv": "^17.2.3",
         "drizzle-kit": "^0.31.5",
         "esbuild": "^0.25.10",
+        "postcss-loader": "^8.2.0",
+        "style-loader": "^4.0.0",
         "tailwindcss": "^4.1.14",
-        "tailwindcss-safe-area": "^1.1.0",
         "turbo": "^2.5.8",
         "tw-animate-css": "^1.4.0",
-        "typescript": "^5.9.3"
+        "typescript": "^5.9.3",
+        "vitest": "^1.0.4"
     },
     "pnpm": {
         "overrides": {}
